# sfedu-hackathon-2025

./: README.md  main.py  requirements.txt  команды.txt
back/: .env copy  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
back/app/: app.py
back/app/composites/: audio_composite.py  auth_composite.py  connection_manager_composite.py  engagement_composite.py  group_composite.py  history_composite.py  organization_composite.py  pair_token_composite.py  token_composite.py  user_composite.py  video_composite.py
back/app/core/: config.py  db.py  errors.py  exception_handlers.py  logger.py
back/app/domains/: audio.py  auth.py  engagement.py  group.py  history.py  organization.py  pair_token.py  token.py  user.py  video.py
back/app/models/: __init__.py  audio.py  engagement.py  group.py  history.py  organization.py  pair_token.py  user.py  video.py
back/app/service/: audio_service.py  connection_manager.py  engagement_service.py  engagement_tracker.py  group_service.py  history_service.py  organization_service.py  pair_token_service.py  token_service.py  user_service.py  video_service.py
back/app/utils/: hash.py  migration.py
back/migrations/: env.py
back/migrations/versions/: 0764265b007f_add_group_session_model.py  0a4f1f2c2f5a_add_groups.py  15b2777f46ea_add_video.py  545875f9925b_add_engagement.py  5c96f6da3dd6_add_user.py  8e5dccee861b_add_organizations.py  a8834174e6b6_add_user_role.py  adf3f0388781_enhance_engagements.py  b2c8d9e4f5a1_add_audio_and_update_engagements.py  (+2 more)
front/: .env  (+7 more)
(+270 files in other folders)
